--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -15,21 +15,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rule et al's computational narrative rules used\n",
+    "\n",
+    "### 1. Tell a story\n",
+    "Through the notebook, I attempt to use both markdown cells and comments inside code cells to help the viewer understand what I am doing and the story I am trying to tell with the data\n",
+    "\n",
+    "### 2. Document the process, not the results\n",
+    "Similar to above, I try to ensure the notebook is very linear and clearly commented throughout\n",
+    "\n",
+    "### 3. Use cell divisions to make steps clear\n",
+    "I try to clearly break up each major step in the workflow into its own cell\n",
+    "\n",
+    "### 4. Modularize code\n",
+    "I contain each chart into its own function so when I need to generate a dashoboard using them later, I just call the function instead of re-writing the code\n",
+    "\n",
+    "### 6. Use version control\n",
+    "This notebook was built using a private git repository on my github profile: https://github.com/grantajason"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import statements\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import ipywidgets as widgets\n",
-    "import panel as pn\n",
-    "from IPython.display import display, clear_output    \n",
-    "from ipywidgets import interact, interactive"
+    "import pandas as pd                                 # Data manipulation\n",
+    "import numpy as np                                  # For any stats or math needed\n",
+    "import matplotlib.pyplot as plt                     # General plotting and formatting\n",
+    "import seaborn as sns                               # More advanced charting\n",
+    "import ipywidgets as widgets                        # For interaction\n",
+    "from IPython.display import display, clear_output   # For dashboarding\n",
+    "from ipywidgets import interact, interactive        # For interaction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preparation\n",
+    "To start, lets bring in the inital data set and perform some general cleansings that will likely be applicable to all charts. Any chart specific cleansing or transformations I will do within the function that is used to create each chart."
    ]
   },
   {
@@ -69,9 +98,6 @@
        "      <th>cadence</th>\n",
        "      <th>datafile</th>\n",
        "      <th>...</th>\n",
-       "      <th>enhanced_speed</th>\n",
-       "      <th>fractional_cadence</th>\n",
-       "      <th>heart_rate</th>\n",
        "      <th>position_lat</th>\n",
        "      <th>position_long</th>\n",
        "      <th>speed</th>\n",
@@ -79,6 +105,9 @@
        "      <th>unknown_87</th>\n",
        "      <th>unknown_88</th>\n",
        "      <th>unknown_90</th>\n",
+       "      <th>month_name</th>\n",
+       "      <th>lat_deg</th>\n",
+       "      <th>lon_deg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -95,15 +124,15 @@
        "      <td>0.0</td>\n",
        "      <td>activities/2675855419.fit.gz</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>68.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2019-07-08 21:04:03</td>\n",
        "      <td>0.0</td>\n",
        "      <td>300.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>July</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -119,15 +148,15 @@
        "      <td>0.0</td>\n",
        "      <td>activities/2675855419.fit.gz</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>68.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2019-07-08 21:04:04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>300.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>July</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -143,15 +172,15 @@
        "      <td>54.0</td>\n",
        "      <td>activities/2675855419.fit.gz</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.316</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>71.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1316.0</td>\n",
        "      <td>2019-07-08 21:04:07</td>\n",
        "      <td>0.0</td>\n",
        "      <td>300.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>July</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -167,9 +196,6 @@
        "      <td>77.0</td>\n",
        "      <td>activities/2675855419.fit.gz</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.866</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>77.0</td>\n",
        "      <td>504432050.0</td>\n",
        "      <td>-999063637.0</td>\n",
        "      <td>1866.0</td>\n",
@@ -177,6 +203,9 @@
        "      <td>0.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>July</td>\n",
+       "      <td>42.281006</td>\n",
+       "      <td>-83.740547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -191,9 +220,6 @@
        "      <td>77.0</td>\n",
        "      <td>activities/2675855419.fit.gz</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.894</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>80.0</td>\n",
        "      <td>504432492.0</td>\n",
        "      <td>-999064534.0</td>\n",
        "      <td>1894.0</td>\n",
@@ -201,10 +227,13 @@
        "      <td>0.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>July</td>\n",
+       "      <td>42.281043</td>\n",
+       "      <td>-83.740622</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -222,41 +251,62 @@
        "3                   NaN    3747.0     77.0  activities/2675855419.fit.gz  ...   \n",
        "4                   NaN    3798.0     77.0  activities/2675855419.fit.gz  ...   \n",
        "\n",
-       "   enhanced_speed  fractional_cadence  heart_rate  position_lat  \\\n",
-       "0           0.000                 0.0        68.0           NaN   \n",
-       "1           0.000                 0.0        68.0           NaN   \n",
-       "2           1.316                 0.0        71.0           NaN   \n",
-       "3           1.866                 0.0        77.0   504432050.0   \n",
-       "4           1.894                 0.0        80.0   504432492.0   \n",
+       "   position_lat  position_long   speed           timestamp  unknown_87  \\\n",
+       "0           NaN            NaN     0.0 2019-07-08 21:04:03         0.0   \n",
+       "1           NaN            NaN     0.0 2019-07-08 21:04:04         0.0   \n",
+       "2           NaN            NaN  1316.0 2019-07-08 21:04:07         0.0   \n",
+       "3   504432050.0   -999063637.0  1866.0 2019-07-08 21:04:14         0.0   \n",
+       "4   504432492.0   -999064534.0  1894.0 2019-07-08 21:04:15         0.0   \n",
        "\n",
-       "   position_long   speed            timestamp  unknown_87 unknown_88  \\\n",
-       "0            NaN     0.0  2019-07-08 21:04:03         0.0      300.0   \n",
-       "1            NaN     0.0  2019-07-08 21:04:04         0.0      300.0   \n",
-       "2            NaN  1316.0  2019-07-08 21:04:07         0.0      300.0   \n",
-       "3   -999063637.0  1866.0  2019-07-08 21:04:14         0.0      100.0   \n",
-       "4   -999064534.0  1894.0  2019-07-08 21:04:15         0.0      100.0   \n",
+       "   unknown_88  unknown_90  month_name    lat_deg    lon_deg  \n",
+       "0       300.0         NaN        July        NaN        NaN  \n",
+       "1       300.0         NaN        July        NaN        NaN  \n",
+       "2       300.0         NaN        July        NaN        NaN  \n",
+       "3       100.0         NaN        July  42.281006 -83.740547  \n",
+       "4       100.0         NaN        July  42.281043 -83.740622  \n",
        "\n",
-       "   unknown_90  \n",
-       "0         NaN  \n",
-       "1         NaN  \n",
-       "2         NaN  \n",
-       "3         NaN  \n",
-       "4         NaN  \n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# bring in strava data stored in github\n",
+    "# bring in strava data\n",
     "\n",
-    "url = 'https://raw.githubusercontent.com/grantajason/SIADS-521-Assignment-4/refs/heads/main/strava.csv?token=GHSAT0AAAAAADATLOY2NXGUG4CRGXE5MGQ6Z63EIAA'\n",
+    "strava = pd.read_csv('~/Downloads/strava.csv')\n",
     "\n",
-    "strava = pd.read_csv(url)"
+    "# perform some initial data cleansing that will be applicable to any analysis later\n",
+    "\n",
+    "# convert timestamp to datetime object for easier manipulation\n",
+    "strava['timestamp'] = pd.to_datetime(strava['timestamp'])\n",
+    "strava['month_name'] = strava['timestamp'].dt.month_name()\n",
+    "\n",
+    "# calculate actual degrees in case I use lat/lon\n",
+    "strava['lat_deg'] = strava['position_lat'] * (180/2**31)\n",
+    "strava['lon_deg'] = strava['position_long'] * (180/2**31)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chart #1\n",
+    "### How much did Prof Brooks' cardio health increase over the summer?\n",
+    "The first thing I want to do to understand how much Prof Brooks' cardio health improved over the summer. To do this, I want to look at the distribution of heart rates over the time periods available in the data set. I decided to use a violin plot to show this distribution, with the X Axis being the month and the Y axis being the heart rate distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cardio_health_violine(ax):\n",
+    "    # create copy of initial data set to avoid errors later\n",
+    "    cardio = strava.copy()\n"
    ]
   }
  ],
