--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,7 @@
     "import matplotlib.pyplot as plt                     # General plotting and formatting\n",
     "import seaborn as sns                               # More advanced charting\n",
     "import ipywidgets as widgets                        # For interaction\n",
+    "from matplotlib import style                        # For setting overall style\n",
     "from IPython.display import display, clear_output   # For dashboarding\n",
     "from ipywidgets import interact, interactive        # For interaction"
    ]
@@ -278,8 +279,6 @@
     "\n",
     "strava = pd.read_csv('~/Downloads/strava.csv')\n",
     "\n",
-    "# perform some initial data cleansing that will be applicable to any analysis later\n",
-    "\n",
     "# convert timestamp to datetime object for easier manipulation\n",
     "strava['timestamp'] = pd.to_datetime(strava['timestamp'])\n",
     "strava['month_name'] = strava['timestamp'].dt.month_name()\n",
@@ -302,11 +301,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cardio_health_violin() missing 1 required positional argument: 'ax'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m     ax\u001b[38;5;241m.\u001b[39mset_xlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMonth\u001b[39m\u001b[38;5;124m'\u001b[39m, labelpad\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m     11\u001b[0m     ax\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHeart Rate in BPM\u001b[39m\u001b[38;5;124m'\u001b[39m, labelpad\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m)\n\u001b[0;32m---> 13\u001b[0m \u001b[43mcardio_health_violin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cardio_health_violin() missing 1 required positional argument: 'ax'"
+     ]
+    }
+   ],
    "source": [
-    "def cardio_health_violine(ax):\n",
+    "def cardio_health_violin(ax):\n",
     "    # create copy of initial data set to avoid errors later\n",
-    "    cardio = strava.copy()\n"
+    "    cardio = strava.copy()\n",
+    "\n",
+    "    sns.set_theme(style=style.library['fivethirtyeight'])\n",
+    "\n",
+    "    violin = sns.violinplot(x=strava['month_name'], y=strava['heart_rate'], ax=ax)\n",
+    "\n",
+    "    ax.set_title('Heart Rate Distribution by Month', pad=20)\n",
+    "    ax.set_xlabel('Month', labelpad=20)\n",
+    "    ax.set_ylabel('Heart Rate in BPM', labelpad=20)\n",
+    "\n",
+    "cardio_health_violin()"
    ]
   }
  ],
