start to define chart 4

--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,6 +407,56 @@
     "Okay, so we learned a few new things from this. First, it appears Prof Brooks became interested in biking around September. The other interesting thing is his heart rate was much higher while running on average in August than it was July.\n",
     "\n",
     "I'm very interested in why there is such a difference between July and August. Lets take a look next at some other things that might impact heart rate in the data, and figure out why this might have been."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chart #4\n",
+    "### How did certain attributes of a workout impact heart rate zones?\n",
+    "\n",
+    "To aid in this analysis, I am going to group what \"Zone\" a heart rate reading was in. Read more about heart rate zones here: https://health.clevelandclinic.org/exercise-heart-rate-zones-explained\n",
+    "\n",
+    "To caluclate these zones, you first calculate your maximum heart rate. The formula for this is 220 - Current Age. Although the data is specific to Professor Brooks, I do not know his age! I'm going to add some interactivity so Professor Brooks can enter his current age.\n",
+    "\n",
+    "Likewise, you then need the user's resting heart rate. This is to calculate the Heart Rate Reserve, which is Max Heart Rate - Resting Heart Rate. You then multiple each zone's relative intensity by percent, and add it back to the resting heart rate. Lets start to build this out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Age Selector\n",
+    "select_age = widgets.IntSlider(\n",
+    "    value=40,\n",
+    "    min=18,\n",
+    "    max=100,\n",
+    "    step=1,\n",
+    "    description='Select Current Age:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=False,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='d'\n",
+    ")\n",
+    "\n",
+    "# Create Resting Heart Rate Selector\n",
+    "\n",
+    "select_resting_hr = widgets.IntSlider(\n",
+    "    value=75,\n",
+    "    min=40,\n",
+    "    max=100,\n",
+    "    step=1,\n",
+    "    description='Select Resting Heart Rate:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=False,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='d'\n",
+    ")"
    ]
   },
   {
