additional cleanup, change chart 4 to chart 3, begin planning actual chart 4

--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -708,7 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chart #4\n",
+    "## Chart #3\n",
     "### How did altitude impact heart rate zones?\n",
     "\n",
     "To aid in this analysis, I am going to group what \"Zone\" a heart rate reading was in. Read more about heart rate zones here: https://health.clevelandclinic.org/exercise-heart-rate-zones-explained\n",
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,12 +806,33 @@
     "    hr_data['zone'] = hr_data['heart_rate'].apply(lambda hr: calculate_hr_zones(hr, age, resting_hr))\n",
     "    hr_data = hr_data[hr_data['month_name'] == month]\n",
     "\n",
-    "    sns.histplot(hr_data, x='zone', y='enhanced_altitude', bins=10, cbar=True, cmap='magma', ax=ax)\n",
+    "    sns.histplot(hr_data, x='zone', y='enhanced_altitude', bins=20, cbar=True, cmap='magma', ax=ax)\n",
+    "\n",
+    "    colorbar = ax.collections[0].colorbar\n",
+    "    colorbar.set_label('# of Readings', fontsize=12)\n",
+    "    colorbar.ax.tick_params(labelsize=8)\n",
     "\n",
     "    ax.set_title('Density of HR Zone by Altitude', pad=20, fontweight='bold')\n",
     "    ax.set_xlabel('HR Zone', labelpad=20, fontsize=12)\n",
     "    ax.set_ylabel('Altitude in meters', labelpad=20, fontsize=12)\n",
-    "    ax.tick_params(axis='both', which='major', labelsize=10)\n"
+    "    ax.tick_params(axis='both', which='major', labelsize=8)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, so we see that in August, Prof Brooks was spending a lot more time in Zone 5, and coincidentally, the time spent in Zone 5 was mostly at a higher altitude! This might mean Prof Brooks changed his route from July to August and spent more time going up hill which led to a higher heart rate during his workouts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chart #4 \n",
+    "### When running, when would Prof Brooks typically hit Zone 5?\n",
+    "\n",
+    "Considering we have more data on running than biking, I'd now like to go one step further and identify, on average, what distance would Prof Brooks hit Zone 5 heart rate when running. "
    ]
   },
   {
@@ -825,21 +846,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f1894ab68d0441eb421e771e31c6b27",
+       "model_id": "05376cb0130840d0bc76b0acd0936f4e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=75, continuous_update=False, description='Select Resting HR:', layout=La…"
+       "interactive(children=(IntSlider(value=80, continuous_update=False, description='Select Resting HR:', layout=La…"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +870,7 @@
     "\n",
     "    clear_output(wait=True)\n",
     "    plt.style.use('fivethirtyeight')\n",
-    "    fig = plt.figure(figsize=(15,15))\n",
+    "    fig = plt.figure(figsize=(12,12))\n",
     "    gs = fig.add_gridspec(2,2)\n",
     "    gs = fig.add_gridspec(2, 2, wspace=0.3, hspace=0.3)\n",
     "\n",
