updating chart 3 to be better!

--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -709,7 +709,7 @@
    "metadata": {},
    "source": [
     "## Chart #3\n",
-    "### How did altitude impact heart rate zones?\n",
+    "### How did distance impact heart rate zones?\n",
     "\n",
     "To aid in this analysis, I am going to group what \"Zone\" a heart rate reading was in. Read more about heart rate zones here: https://health.clevelandclinic.org/exercise-heart-rate-zones-explained\n",
     "\n",
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,15 +806,15 @@
     "    hr_data['zone'] = hr_data['heart_rate'].apply(lambda hr: calculate_hr_zones(hr, age, resting_hr))\n",
     "    hr_data = hr_data[hr_data['month_name'] == month]\n",
     "\n",
-    "    sns.histplot(hr_data, x='zone', y='enhanced_altitude', bins=20, cbar=True, cmap='magma', ax=ax)\n",
+    "    sns.histplot(hr_data, x='zone', y='distance', bins=20, cbar=True, cmap='magma', ax=ax)\n",
     "\n",
     "    colorbar = ax.collections[0].colorbar\n",
     "    colorbar.set_label('# of Readings', fontsize=12)\n",
     "    colorbar.ax.tick_params(labelsize=8)\n",
     "\n",
-    "    ax.set_title('Density of HR Zone by Altitude', pad=20, fontweight='bold')\n",
+    "    ax.set_title('Density of HR Zone by Distance', pad=20, fontweight='bold')\n",
     "    ax.set_xlabel('HR Zone', labelpad=20, fontsize=12)\n",
-    "    ax.set_ylabel('Altitude in meters', labelpad=20, fontsize=12)\n",
+    "    ax.set_ylabel('Distance in meters', labelpad=20, fontsize=12)\n",
     "    ax.tick_params(axis='both', which='major', labelsize=8)\n"
    ]
   },
@@ -822,7 +822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, so we see that in August, Prof Brooks was spending a lot more time in Zone 5, and coincidentally, the time spent in Zone 5 was mostly at a higher altitude! This might mean Prof Brooks changed his route from July to August and spent more time going up hill which led to a higher heart rate during his workouts."
+    "Looking at data from August, we can see that approaching the 3 mile mark (~4800m) is when Prof Brook's heart rate appears to peak as there is a high density of readings in Zone 5 around that distance. What's also interesting is the gap in Zone 2 around 3000-4000m. This likely implies that consistently, Prof Brooks is still in the middle of his workouts around this distance mark. It isn't until his HR peaks that he begins to cool down, as indicated by the smaller amount of readings that appear in Zone 1-4 at high distances."
    ]
   },
   {
@@ -830,9 +830,7 @@
    "metadata": {},
    "source": [
     "## Chart #4 \n",
-    "### When running, when would Prof Brooks typically hit Zone 5?\n",
-    "\n",
-    "Considering we have more data on running than biking, I'd now like to go one step further and identify, on average, what distance would Prof Brooks hit Zone 5 heart rate when running. "
+    "###"
    ]
   },
   {
@@ -846,21 +844,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05376cb0130840d0bc76b0acd0936f4e",
+       "model_id": "65cb24ef097e44058fca076e3dcab0f5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=80, continuous_update=False, description='Select Resting HR:', layout=La…"
+       "interactive(children=(IntSlider(value=70, continuous_update=False, description='Select Resting HR:', layout=La…"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
