create actual final regression chart 4

--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,25 +797,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "def activity_hr_heatmap(ax, age, resting_hr, month):\n",
+    "    \n",
+    "    # Create new df applying HR Zone definition from above depending on provided inputs\n",
     "    hr_data = strava.copy()\n",
+    "    hr_data['activity'] = hr_data['enhanced_speed'].apply(running_or_biking)\n",
+    "    hr_data = hr_data[hr_data['activity'] == 'Running']\n",
     "    hr_data['zone'] = hr_data['heart_rate'].apply(lambda hr: calculate_hr_zones(hr, age, resting_hr))\n",
     "    hr_data = hr_data[hr_data['month_name'] == month]\n",
     "\n",
+    "    # Create 2D Histplot\n",
     "    sns.histplot(hr_data, x='zone', y='distance', bins=20, cbar=True, cmap='magma', ax=ax)\n",
     "\n",
+    "    # Update color bar formatting\n",
     "    colorbar = ax.collections[0].colorbar\n",
     "    colorbar.set_label('# of Readings', fontsize=12)\n",
     "    colorbar.ax.tick_params(labelsize=8)\n",
     "\n",
+    "    # Update chart formatting\n",
     "    ax.set_title('Density of HR Zone by Distance', pad=20, fontweight='bold')\n",
     "    ax.set_xlabel('HR Zone', labelpad=20, fontsize=12)\n",
     "    ax.set_ylabel('Distance in meters', labelpad=20, fontsize=12)\n",
-    "    ax.tick_params(axis='both', which='major', labelsize=8)\n"
+    "    ax.tick_params(axis='both', which='major', labelsize=10, pad=20)\n"
    ]
   },
   {
@@ -830,7 +837,44 @@
    "metadata": {},
    "source": [
     "## Chart #4 \n",
-    "###"
+    "### Regression of HR Zone and Distance\n",
+    "\n",
+    "Lets take the above chart one final step, and see if we can calculate a \"regression\" to model Prof Brook's heart rate over the distance. To do this, I am going to use a scatter plot and reg plot in Seaborn. I am going to leverage some of the similar capability above to calculate these HR Zones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hr_regression(ax, age, resting_hr, month):\n",
+    "\n",
+    "    # Create new df applying HR Zone definition from above depending on provided inputs\n",
+    "    hr_data = strava.copy()\n",
+    "    hr_data['activity'] = hr_data['enhanced_speed'].apply(running_or_biking)\n",
+    "    hr_data = hr_data[hr_data['activity'] == 'Running']\n",
+    "    hr_data['zone'] = hr_data['heart_rate'].apply(lambda hr: calculate_hr_zones(hr, age, resting_hr))\n",
+    "    hr_data = hr_data[hr_data['month_name'] == month]\n",
+    "\n",
+    "    sns.scatterplot(hr_data, x='distance', y='heart_rate', hue='zone', palette='magma', ax=ax, s=20)\n",
+    "\n",
+    "    sns.regplot(hr_data, x='distance', y='heart_rate', scatter=False, ci=95,\n",
+    "                line_kws={'color': 'black', 'linewidth':3, 'label': 'Regression Line'}, ax=ax)\n",
+    "\n",
+    "    # Formatting\n",
+    "    ax.set_title('HR Regression by Distance', pad=20, fontweight='bold')\n",
+    "    ax.set_xlabel('Distance in meters', labelpad=20, fontsize=12)\n",
+    "    ax.set_ylabel('Heart Rate', labelpad=20, fontsize=12)\n",
+    "    ax.legend(title='HR Zone', loc='lower right', fontsize=8)\n",
+    "    ax.tick_params(axis='both', which='major', labelsize=10, pad=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well what do you know! The regression added some meaningful context. Based on August data, although Prof Brooks spent a lot of time in HR Zone 5 when approaching the 3 mile mark, the regression actually indicates it is around ~3600 meters that he would typically cross into Zone 5 for the first time."
    ]
   },
   {
@@ -844,13 +888,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65cb24ef097e44058fca076e3dcab0f5",
+       "model_id": "abb6e0a55fb243faa26b3a27a7d680b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -858,7 +902,7 @@
        "interactive(children=(IntSlider(value=70, continuous_update=False, description='Select Resting HR:', layout=La…"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,10 +924,13 @@
     "    fig.sca(ax2)\n",
     "    activity_scatter(ax2)\n",
     "\n",
-    "    # figure out how to display a plotly graph using gridspec add_subplot\n",
     "    ax3 = fig.add_subplot(gs[1, 0])\n",
     "    fig.sca(ax3)\n",
     "    activity_hr_heatmap(ax3, age=age, resting_hr=resting_hr, month=month)\n",
+    "\n",
+    "    ax4 = fig.add_subplot(gs[1, 1])\n",
+    "    fig.sca(ax4)\n",
+    "    hr_regression(ax4, age=age, resting_hr=resting_hr, month=month)\n",
     "\n",
     "\n",
     "dashboard = interactive(create_dashboard, resting_hr=select_resting_hr, age=select_age, month=select_month)\n",
