--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -210,7 +210,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "dbc65ff1-a7fc-4a8c-8c93-d139ad3a8de7",
+       "ref": "03035913-fdb0-4d22-a964-a99046b43e6e",
        "rows": [
         [
          "0",
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,13 +781,13 @@
     "\n",
     "    if heart_rate < (resting_hr + (hr_reserve * 0.5)):\n",
     "        return \"Resting\"\n",
-    "    elif resting_hr + (hr_reserve * 0.5) <= heart_rate < (resting_hr + (hr_reserve * 0.6)): # fixed logic\n",
+    "    elif resting_hr + (hr_reserve * 0.5) <= heart_rate < (resting_hr + (hr_reserve * 0.6)):\n",
     "        return \"Zone 1\"\n",
-    "    elif resting_hr + (hr_reserve * 0.6) <= heart_rate < (resting_hr + (hr_reserve * 0.7)): # fixed logic\n",
+    "    elif resting_hr + (hr_reserve * 0.6) <= heart_rate < (resting_hr + (hr_reserve * 0.7)):\n",
     "        return \"Zone 2\"\n",
-    "    elif resting_hr + (hr_reserve * 0.7) <= heart_rate < (resting_hr + (hr_reserve * 0.8)): # fixed logic\n",
+    "    elif resting_hr + (hr_reserve * 0.7) <= heart_rate < (resting_hr + (hr_reserve * 0.8)):\n",
     "        return \"Zone 3\"\n",
-    "    elif resting_hr + (hr_reserve * 0.8) <= heart_rate < (resting_hr + (hr_reserve * 0.9)): # fixed logic\n",
+    "    elif resting_hr + (hr_reserve * 0.8) <= heart_rate < (resting_hr + (hr_reserve * 0.9)):\n",
     "        return \"Zone 4\"\n",
     "    elif heart_rate >= (resting_hr + (hr_reserve * 0.9)):\n",
     "        return \"Zone 5\"\n",
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
