add detail on how to run

--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -33,7 +33,13 @@
     "I contain each chart into its own function so when I need to generate a dashoboard using them later, I just call the function instead of re-writing the code\n",
     "\n",
     "### 6. Use version control\n",
-    "This notebook was built using a private git repository on my github profile: https://github.com/grantajason"
+    "This notebook was built using a private git repository on my github profile: https://github.com/grantajason\n",
+    "\n",
+    "## Running this notebook\n",
+    "\n",
+    "To run this notebook yourself, please download the notebook from my github (https://github.com/grantajason/SIADS-521-Assignment-4).\n",
+    "Please also ensure you have the strava.csv data set downloaded to your downloads folder.\n",
+    "This notebook was designed to work if you select \"run all\" form beginning to end. Everything should be in order, and some cells may not work if you run them out of order."
    ]
   },
   {
