change age default value

--- a/gajason-siads521-a4.ipynb
+++ b/gajason-siads521-a4.ipynb
@@ -719,20 +719,20 @@
     "\n",
     "To aid in this analysis, I am going to group what \"Zone\" a heart rate reading was in. Read more about heart rate zones here: https://health.clevelandclinic.org/exercise-heart-rate-zones-explained\n",
     "\n",
-    "To caluclate these zones, you first calculate your maximum heart rate. The formula for this is 220 - Current Age. Although the data is specific to Professor Brooks, I do not know his age! I'm going to add some interactivity so Professor Brooks can enter his current age.\n",
+    "To caluclate these zones, you first calculate your maximum heart rate. The formula for this is 220 - Current Age. Although the data is specific to Professor Brooks, I do not know his age! I'm going to add some interactivity so Professor Brooks can enter his current age. For my narrative, I am going to use an assumed age of 55.\n",
     "\n",
     "Likewise, you then need the user's resting heart rate. This is to calculate the Heart Rate Reserve, which is Max Heart Rate - Resting Heart Rate. You then multiple each zone's relative intensity by percent, and add it back to the resting heart rate. Lets start to build this out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Age Selector\n",
     "select_age = widgets.IntSlider(\n",
-    "    value=40,\n",
+    "    value=55,\n",
     "    min=18,\n",
     "    max=100,\n",
     "    step=1,\n",
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,21 +894,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abb6e0a55fb243faa26b3a27a7d680b9",
+       "model_id": "dfa9b801d63245dc90c7ac4b31ac26b3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=70, continuous_update=False, description='Select Resting HR:', layout=La…"
+       "interactive(children=(IntSlider(value=75, continuous_update=False, description='Select Resting HR:', layout=La…"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
